--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,18 @@
-<app-sign-up></app-sign-up>
-<app-sign-in></app-sign-in>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div id="signInUp">
+        <ul id="formsNavigation">
+          <li routerLinkActive="activeTab">
+            <a routerLink="sign-in">Sign In</a>
+          </li>
+          <li routerLinkActive="activeTab">
+            <a routerLink="sign-up">Sign Up</a>
+          </li>
+        </ul>
+
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </div>
+</div>
