Basic markup for the 'Sign-up' form is done

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,13 @@
 #signInUp {
-    width: 60%;
-    height: 0 auto;
+    width: 50%;
+    min-height: 300px;
+    height: auto;
     margin: 0 auto;
     border: 1px solid red;  
     margin-top: 15%;
     background: white;
     border-radius: 8px;
+    padding-bottom: 20px;
 
     #formsNavigation {
         border: 1px solid black;
