'Auth-guard' and 'Profile' component were added to the project

--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -1,6 +1,7 @@
 <div class="col-xs-12 col-md-12">
     <form id="signIn"
-          #f="ngForm">
+          #f="ngForm"
+          (ngSubmit)="navToDashboard()">
 
     <div class="form-group">
         <label for="login">
