--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -1,7 +1,7 @@
 <div class="col-xs-12 col-md-12">
     <form id="signIn"
           #f="ngForm"
-          (ngSubmit)="navToDashboard()">
+          (ngSubmit)="onLogin(f)">
 
     <div class="form-group">
         <label for="login">
