UI for 'Sign-in' and 'Sign-up' is done

--- a/src/app/auth/authentication/authentication.component.html
+++ b/src/app/auth/authentication/authentication.component.html
@@ -4,13 +4,13 @@
       <div id="signInUp">
         <ul id="formsNavigation">
           <li routerLinkActive="activeTab">
-            <a routerLink="sign-in">Sign In</a>
+            <a routerLink="sign-in">SIGN IN</a>
           </li>
+          |
           <li routerLinkActive="activeTab">
-            <a routerLink="sign-up">Sign Up</a>
+            <a routerLink="sign-up">SIGN UP</a>
           </li>
         </ul>
-
         <router-outlet></router-outlet>
       </div>
     </div>
