--- a/src/app/dashboard/product-dashboard/product-dashboard.component.html
+++ b/src/app/dashboard/product-dashboard/product-dashboard.component.html
@@ -1,3 +1,9 @@
-<div id="content">
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam, obcaecati!
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12">
+      <div id="content">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam, obcaecati!
+      </div>
+    </div>
   </div>
+</div>
