--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
+
 body {
-    background: rgb(51, 49, 49);
+    background-image: url('./assets/fooddelivery1.jpg'); 
+    background-size: cover;
+    background-repeat: no-repeat;
 }
