--- a/src/app/auth/sign-in/sign-in.component.scss
+++ b/src/app/auth/sign-in/sign-in.component.scss
@@ -1,3 +1,21 @@
 #signIn {
+  #credentialsWrapper {
+    width: 80%;
     margin: 0 auto;
+
+    #login,
+    #password {
+      margin: 0 auto;
+      width: 100%;
+    }
+  }
+
+  .controls {
+    text-align: center;
+
+    #signInBtn {
+      width: 100px;
+      height: 40px;
+    }
+  }
 }
