--- a/src/app/dashboard/product-dashboard/product-dashboard.component.scss
+++ b/src/app/dashboard/product-dashboard/product-dashboard.component.scss
@@ -1,5 +1,8 @@
 #content {
+    margin-right: 0;
+    margin-left: -31px;
     width: 100%;   
     height: 100%;
-    position: relative;
+    position: fixed;
+    background: white;
 }
