UI for the 'side-bar' is added

--- a/src/app/dashboard/product-dashboard/product-dashboard.component.html
+++ b/src/app/dashboard/product-dashboard/product-dashboard.component.html
@@ -1,8 +1,12 @@
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-12">
-      <div id="content">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam, obcaecati!
+  <div id="content">
+    <div id="dashboard">
+      <div id="leftSection">
+        <app-sidebar></app-sidebar>
+      </div>
+
+      <div id="rightSection">
+        Lorem ipsum dolor sit amet consectetur adipisicing.
       </div>
     </div>
   </div>
