Header component and basic UI for it were added to the project

--- a/src/app/dashboard/product-dashboard/product-dashboard.component.html
+++ b/src/app/dashboard/product-dashboard/product-dashboard.component.html
@@ -6,7 +6,7 @@
       </div>
 
       <div id="rightSection">
-        Lorem ipsum dolor sit amet consectetur adipisicing.
+        <app-header></app-header>
       </div>
     </div>
   </div>
