'Log out' functionality is added to the app

--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -5,7 +5,7 @@
 
     <div id="controlsWrapper">
         <div id="activeUser">
-            Hello {{ activeUser }}
+            Hello {{ activeUser }} / <a (click)="logOut()">Log Out</a>
         </div>
         <div id="cart">Product Cart</div>
     </div>
