Profile module and routing are added to the app

--- a/src/app/userprofile/profile/profile.component.html
+++ b/src/app/userprofile/profile/profile.component.html
@@ -1,1 +1,7 @@
-<p>profile works!</p>
+<div class="container-fluid">
+    <p> {{ user.user.username }} </p>
+    <p> {{ user.user.login }} </p>
+    <p> {{ user.user.phone }} </p>
+    <p> {{ user.user.email }} </p>
+    <p> {{ user.user.address }} </p>
+</div>
