--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -5,7 +5,7 @@
 
     <div id="controlsWrapper">
         <div id="activeUser">
-            Hello {{ activeUser.user.login }} / <a (click)="logOut()">Log Out</a>
+            Hello <a [routerLink]="['profile', userId]"><b>{{ activeUser.user.login }}</b></a> / <a (click)="logOut()">Log Out</a>
         </div>
         <div id="cart">Product Cart</div>
     </div>
