--- a/src/app/dashboard/product-dashboard/product-dashboard.component.html
+++ b/src/app/dashboard/product-dashboard/product-dashboard.component.html
@@ -7,6 +7,7 @@
 
       <div id="rightSection">
         <app-header></app-header>
+        <router-outlet></router-outlet>
       </div>
     </div>
   </div>
