Basic UI for user Profile is added

--- a/src/app/userprofile/profile/profile.component.html
+++ b/src/app/userprofile/profile/profile.component.html
@@ -1,7 +1,8 @@
 <div class="container-fluid">
-    <p> {{ user.user.username }} </p>
-    <p> {{ user.user.login }} </p>
-    <p> {{ user.user.phone }} </p>
-    <p> {{ user.user.email }} </p>
-    <p> {{ user.user.address }} </p>
+    <div id="profileInfoWrapper">
+        <ul id="profileNav">
+            <li><a>Profile Info</a></li>
+            <li><a>Orders History</a></li>
+        </ul>
+    </div>
 </div>
