--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -1,7 +1,7 @@
 <div class="col-xs-12 col-md-12">
     <form id="signIn"
-          #f="ngForm"
-          (ngSubmit)="onLogin(f)">
+          (ngSubmit)="onLogin(f)"
+          #f="ngForm">
 
     <div id="credentialsWrapper">
         <div class="form-group">
@@ -13,28 +13,38 @@
                     class="form-control"
                     id="login"
                     name="login"
-                    ngModel>
+                    required
+                    login
+                    ngModel
+                    #login="ngModel">
             
         </div>
-    
+        <p *ngIf="!login.valid && login.touched" class="validationError">Login is not valid!</p>
+
         <div class="form-group">
             <label for="login">
                 Password
             </label>
-            <input type="text"
+            <input type="password"
                     placeholder="Enter password"
                     class="form-control"
                     id="password"
                     name="password"
+                    required
+                    password
+                    #password="ngModel"
                     ngModel>
             
         </div>
+        <p *ngIf="!password.valid && password.touched" class="validationError">Password is not valid!</p>
+        <p *ngIf="authStatus == 'error'" class="validationError">Your login and password are incorect!</p>
     </div>
 
     <div class="controls">
         <button class="btn btn-primary"
                 id="signInBtn"
-                type="submit">
+                type="submit"
+                [disabled]="!f.valid">
             Log In  
         </button>
     </div>
