--- a/src/app/auth/sign-in/sign-in.component.scss
+++ b/src/app/auth/sign-in/sign-in.component.scss
@@ -8,6 +8,11 @@
       margin: 0 auto;
       width: 100%;
     }
+
+    .validationError {
+      color: red;
+      font-weight: 600;
+    }
   }
 
   .controls {
