--- a/src/app/dashboard/product-dashboard/product-dashboard.component.html
+++ b/src/app/dashboard/product-dashboard/product-dashboard.component.html
@@ -7,6 +7,9 @@
 
       <div id="rightSection">
         <app-header></app-header>
+        <div id="products-grid">
+
+        </div>
         <router-outlet></router-outlet>
       </div>
     </div>
