--- a/src/app/userprofile/profile/profile.component.html
+++ b/src/app/userprofile/profile/profile.component.html
@@ -1,8 +1,35 @@
 <div class="container-fluid">
-    <div id="profileInfoWrapper">
-        <ul id="profileNav">
-            <li><a>Profile Info</a></li>
-            <li><a>Orders History</a></li>
-        </ul>
+  <div id="profileInfoWrapper">
+    <ul id="profileNav">
+      <li><a>Profile Info</a></li>
+      <li><a>Orders History</a></li>
+    </ul>
+
+    <div id="userDetails">
+      <!--User Name-->
+      <div class="col-md-3"><h5>User name</h5></div>
+      <div class="col-md-6">{{ user.user.username }}</div>
+      <div class="col-md-3"></div>
+
+      <!--Login-->
+      <div class="col-md-3"><h5>Login</h5></div>
+      <div class="col-md-6">{{ user.user.login }}</div>
+      <div class="col-md-3"></div>
+
+      <!--Phone number-->
+      <div class="col-md-3"><h5>Phone number</h5></div>
+      <div class="col-md-6">{{ user.user.phone }}</div>
+      <div class="col-md-3"></div>
+
+      <!--Email-->
+      <div class="col-md-3"><h5>Email</h5></div>
+      <div class="col-md-6">{{ user.user.email }}</div>
+      <div class="col-md-3"></div>
+
+      <!--Address-->
+      <div class="col-md-3"><h5>Address</h5></div>
+      <div class="col-md-6">{{ user.user.address }}</div>
+      <div class="col-md-3"></div>
     </div>
+  </div>
 </div>
