--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,12 @@
 
 body {
     background-image: url('./assets/fooddelivery1.jpg'); 
-    background-size: cover;
+    background-size: contain 100%;
     background-repeat: no-repeat;
 }
+
+@media screen and (min-width: 1410px) {
+    body {
+        background-size: cover;
+    }
+  }
