Basic redesign for 'Profile' component is implemented

--- a/src/app/dashboard/product-dashboard/product-dashboard.component.html
+++ b/src/app/dashboard/product-dashboard/product-dashboard.component.html
@@ -8,7 +8,9 @@
       <div id="rightSection">
         <app-header></app-header>
         <div id="products-grid">
-
+          <div *ngFor="let product of products">
+            <!--{{ product.productTitle }}-->
+          </div>
         </div>
         <router-outlet></router-outlet>
       </div>
