--- a/src/app/dashboard/product-dashboard/product-dashboard.component.scss
+++ b/src/app/dashboard/product-dashboard/product-dashboard.component.scss
@@ -15,11 +15,12 @@
 
     #rightSection {
         width: 85%;
-        height: 100%;
+        height: auto;
         background-color: white;
         position: absolute;
         z-index: 5;
         left: 15%;
         top: 0;
+         
     }
 }
