--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,12 @@
 html, body {
     height: 100%;
     border: 2px solid green;
+    overflow: auto;
 }
 
 .content {
     width: 100%;
     height: 100%;
     min-height: 100%;
+    overflow: auto;
 }
