--- a/src/app/userprofile/profile/profile.component.html
+++ b/src/app/userprofile/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
   <div id="profileInfoWrapper">
     <ul id="profileNav">
       <li><a>Profile Info</a></li>
@@ -6,30 +6,45 @@
     </ul>
 
     <div id="userDetails">
-      <!--User Name-->
-      <div class="col-md-3"><h5>User name</h5></div>
-      <div class="col-md-6">{{ user.user.username }}</div>
-      <div class="col-md-3"></div>
+      <div class="row">
+        <div class="col-md-5">
+          <div id="logoWrapper">
+            <img src="../../../assets/dummyUser.jpg">
+          </div>
+        </div>
+        <div class="col-md-7">
+          <div class="row">
+            <div class="col-md-4 col-xs-4"><h5>Login</h5></div>
+            <div class="col-md-8 col-xs-8 userInfo">{{ user.user.login }}</div>
+          </div>
 
-      <!--Login-->
-      <div class="col-md-3"><h5>Login</h5></div>
-      <div class="col-md-6">{{ user.user.login }}</div>
-      <div class="col-md-3"></div>
+          <div class="row">
+            <div class="col-md-4 col-xs-4"><h5>User name</h5></div>
+            <div class="col-md-8 col-xs-8 userInfo">{{ user.user.username }}</div>
+          </div>
 
-      <!--Phone number-->
-      <div class="col-md-3"><h5>Phone number</h5></div>
-      <div class="col-md-6">{{ user.user.phone }}</div>
-      <div class="col-md-3"></div>
+          <div class="row">
+            <div class="col-md-5 col-xs-5"><h5>Phone number</h5></div>
+            <div class="col-md-7 col-xs-7 userInfo">{{ user.user.phone }}</div>
+          </div>
 
-      <!--Email-->
-      <div class="col-md-3"><h5>Email</h5></div>
-      <div class="col-md-6">{{ user.user.email }}</div>
-      <div class="col-md-3"></div>
+          <div class="row">
+            <div class="col-md-4 col-xs-4"><h5>Email</h5></div>
+            <div class="col-md-8 col-xs-8 userInfo">{{ user.user.email }}</div>
+          </div>
 
-      <!--Address-->
-      <div class="col-md-3"><h5>Address</h5></div>
-      <div class="col-md-6">{{ user.user.address }}</div>
-      <div class="col-md-3"></div>
+          <div class="row">
+            <div class="col-md-4 col-xs-4"><h5>Address</h5></div>
+            <div class="col-md-8 col-xs-8 userInfo">{{ user.user.address }}</div>
+          </div>
+
+          <div class="row justify-content-center align-items-center">
+            <button class="btn btn-danger">
+              Edit photo
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
