--- a/src/app/userprofile/profile/profile.component.scss
+++ b/src/app/userprofile/profile/profile.component.scss
@@ -1,5 +1,5 @@
 #profileInfoWrapper {
-  width: 80%;
+  width: 75%;
   min-height: 300px;
   margin: 0 auto;
   margin-top: 7%;
@@ -13,7 +13,7 @@
     line-height: 35px;
     border-top-right-radius: 8px;
     border-top-left-radius: 8px;
-    background: rgb(241, 81, 81);
+    background: rgb(124, 114, 114);
 
     li {
       list-style-type: none;
@@ -30,5 +30,20 @@
     width: 80%;
     height: 100%;
     margin: 0 auto;
+    
+    #logoWrapper {
+
+      img {
+        width: 220px;
+        height: 250px;
+        border-radius: 50% 50%;
+      }
+    }
+
+    .userInfo {
+      font-size: 18px;
+      font-style: italic;
+      text-align: left;
+    }
   }
 }
