'Product grid' component is added to the app and also to the dashboard-routing module

--- a/src/app/dashboard/sidebar/sidebar.component.html
+++ b/src/app/dashboard/sidebar/sidebar.component.html
@@ -1,5 +1,10 @@
 <div id="sideBar">
     <nav id="productCategory">
+
+        <div id="logo">
+            <a routerLink="products">Logo</a>
+        </div>
+
         <ul>
             <li>Pizza</li>
             <li>Drinks</li>
