--- a/src/app/dashboard/sidebar/sidebar.component.scss
+++ b/src/app/dashboard/sidebar/sidebar.component.scss
@@ -12,6 +12,11 @@
         position: relative;
         top: 100px;
 
+        #logo {
+            text-align: center;
+        }
+
+
         ul {
             margin-left: 0;
             list-style-position: inside;
