--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
-<div class="container-fluid content">
-  <div class="row">
-    <div class="col-md-12">
-        <router-outlet></router-outlet>
-    </div>
-  </div>
+<div id="appDev">
+  <div class="container-fluid">  
+    <router-outlet></router-outlet>
+  </div>  
 </div>
+
