--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,16 @@
-html, body {
-    height: 100%;
-    border: 2px solid green;
-    overflow: auto;
-}
-
-.content {
+#appDev {
     width: 100%;
     height: 100%;
-    min-height: 100%;
+    position: relative;
     overflow: auto;
+
+    .container-fluid {
+        padding: 0;
+        height: 100%;
+        overflow: auto;
+    }
 }
+
+
+
+ 
