--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -1,36 +1,39 @@
 <div class="col-xs-12 col-md-12">
     <form id="signUp"
+          [formGroup]="registrationForm"
+          (ngSubmit)="test()"
           #f="ngForm">
           <div id="userInfoWrapper">
             <div class="row">
                 <div class="col-md-6 col-xs-6">
                     <div class="form-group">
-                        <label for="username">
-                            Username
+                        <label for="firstName">
+                            First Name
                             <input type="text"
-                                    placeholder="Enter username"
+                                    placeholder="Enter first name"
                                     class="form-control"
-                                    id="username"
-                                    name="username"
-                                    ngModel>  
+                                    id="firstName"
+                                    name="firstName"
+                                    formControlName="firstName">  
                         </label>
                     </div>
                 </div>
-    
+
                 <div class="col-md-6 col-xs-6">
                     <div class="form-group">
-                        <label for="address">
-                            Address
+                        <label for="lastName">
+                            Last name
                             <input type="text"
-                                   placeholder="Enter address"
-                                   class="form-control"
-                                   id="address"
-                                   name="address"
-                                   ngModel>  
+                                    placeholder="Enter last name"
+                                    class="form-control"
+                                    id="lastName"
+                                    name="lastName"
+                                    formControlName="lastName">  
                         </label>
                     </div>
                 </div>
     
+              
                 <div class="col-md-6 col-xs-6">
                     <div class="form-group">
                         <label for="Password">
@@ -40,7 +43,35 @@
                                    class="form-control"
                                    id="password"
                                    name="password"
-                                   ngModel>  
+                                   formControlName="password">  
+                        </label>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-xs-6">
+                    <div class="form-group">
+                        <label for="passwordRepeat">
+                            Repeat Password
+                            <input type="passwordRepeat"
+                                   placeholder="Repeat password"
+                                   class="form-control"
+                                   id="passwordRepeat"
+                                   name="passwordRepeat"
+                                   formControlName="repeatPassword">  
+                        </label>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-xs-6">
+                    <div class="form-group">
+                        <label for="login">
+                            Login
+                            <input type="text"
+                                    placeholder="Enter login"
+                                    class="form-control"
+                                    id="login"
+                                    name="login"
+                                    formControlName="login">  
                         </label>
                     </div>
                 </div>
@@ -54,7 +85,7 @@
                                    class="form-control"
                                    id="phone"
                                    name="phone"
-                                   ngModel>  
+                                   formControlName="phone">  
                         </label>
                     </div>
                 </div>
@@ -68,21 +99,21 @@
                                    class="form-control"
                                    id="email"
                                    name="email"
-                                   ngModel>  
+                                   formControlName="email">  
                         </label>
                     </div>
-            </div>
+                </div>
     
                 <div class="col-md-6 col-xs-6">
                     <div class="form-group">
-                        <label for="passwordRepeat">
-                            Repeat Password
-                            <input type="passwordRepeat"
-                                   placeholder="Repeat password"
+                        <label for="address">
+                            Address
+                            <input type="text"
+                                   placeholder="Enter address"
                                    class="form-control"
-                                   id="passwordRepeat"
-                                   name="passwordRepeat"
-                                   ngModel>  
+                                   id="address"
+                                   name="address"
+                                   formControlName="address">  
                         </label>
                     </div>
                 </div>
