--- a/src/app/userprofile/profile/profile.component.html
+++ b/src/app/userprofile/profile/profile.component.html
@@ -20,7 +20,7 @@
 
           <div class="row">
             <div class="col-md-4 col-xs-4"><h5>User name</h5></div>
-            <div class="col-md-8 col-xs-8 userInfo">{{ user.user.username }}</div>
+            <div class="col-md-8 col-xs-8 userInfo">{{ user.user.firstName }}  {{ user.user.lastName }}</div>
           </div>
 
           <div class="row">
