--- a/src/app/userprofile/profile/profile.component.html
+++ b/src/app/userprofile/profile/profile.component.html
@@ -13,38 +13,16 @@
           </div>
         </div>
         <div class="col-md-7">
-          <div class="row">
-            <div class="col-md-4 col-xs-4"><h5>Login</h5></div>
-            <div class="col-md-8 col-xs-8 userInfo">{{ user.user.login }}</div>
+          <div class="row" *ngFor="let key of objectKeys(userViewTemplate)">
+            <div class="col-md-5 col-xs-5"><h5>{{ key }}:</h5></div>
+            <div class="col-md-7 col-xs-7 userInfo">{{ userViewTemplate[key] }}</div>
           </div>
-
-          <div class="row">
-            <div class="col-md-4 col-xs-4"><h5>User name</h5></div>
-            <div class="col-md-8 col-xs-8 userInfo">{{ user.user.firstName }}  {{ user.user.lastName }}</div>
-          </div>
-
-          <div class="row">
-            <div class="col-md-5 col-xs-5"><h5>Phone number</h5></div>
-            <div class="col-md-7 col-xs-7 userInfo">{{ user.user.phone }}</div>
-          </div>
-
-          <div class="row">
-            <div class="col-md-4 col-xs-4"><h5>Email</h5></div>
-            <div class="col-md-8 col-xs-8 userInfo">{{ user.user.email }}</div>
-          </div>
-
-          <div class="row">
-            <div class="col-md-4 col-xs-4"><h5>Address</h5></div>
-            <div class="col-md-8 col-xs-8 userInfo">{{ user.user.address }}</div>
-          </div>
-
-          <div class="row justify-content-center align-items-center">
-            <button class="btn btn-danger">
-              Edit photo
-            </button>
-          </div>
-        </div>
       </div>
+    </div>
+    <div class="row justify-content-center align-items-center">
+      <button class="btn btn-danger">
+        Edit photo
+      </button>
     </div>
   </div>
 </div>
