Added some changes to the 'product-grid' component

--- a/src/app/dashboard/product-grid/product-grid.component.html
+++ b/src/app/dashboard/product-grid/product-grid.component.html
@@ -1,6 +1,6 @@
 <div id="products-grid">
   <div class="row">
-    <div class="col-md-4 col-sm-6" 
+    <div class="col-lg-4 col-md-4 col-sm-6" 
          *ngFor="let product of products">
       <div class="product">
         <div class="imgWrapper">
