--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -1,7 +1,7 @@
 <div class="col-xs-12 col-md-12">
     <form id="signUp"
           [formGroup]="registrationForm"
-          (ngSubmit)="test()"
+          (ngSubmit)="onSignUp()"
           #f="ngForm">
           <div id="userInfoWrapper">
             <div class="row">
