--- a/src/app/dashboard/product-grid/product-grid.component.html
+++ b/src/app/dashboard/product-grid/product-grid.component.html
@@ -1,7 +1,7 @@
 <div id="products-grid">
   <div class="row">
     <div class="col-lg-4 col-md-4 col-sm-6" 
-         *ngFor="let product of products">
+         *ngFor="let product of products[activeCategory]">
       <div class="product">
         <div class="imgWrapper">
           <img [src]="product.product.imgPath"/>
