--- a/src/app/dashboard/sidebar/sidebar.component.html
+++ b/src/app/dashboard/sidebar/sidebar.component.html
@@ -6,9 +6,9 @@
         </div>
 
         <ul>
-            <li>Pizza</li>
-            <li>Drinks</li>
-            <li>Salads</li>
+            <li><a [routerLink]="['/dashboard/products', 'pizza']">Pizza</a></li>
+            <li><a [routerLink]="['/dashboard/products', 'drinks']">Drinks</a></li>
+            <li><a [routerLink]="['/dashboard/products', 'salads']">Salads</a></li>
         </ul>
     </nav>
 </div>
