Mock data is added to the app

--- a/src/app/dashboard/product-grid/product-grid.component.html
+++ b/src/app/dashboard/product-grid/product-grid.component.html
@@ -1,22 +1,22 @@
 <div id="products-grid">
   <div class="row">
     <div class="col-lg-4 col-md-4 col-sm-6" 
-         *ngFor="let product of products[activeCategory]">
+         *ngFor="let product of (products$ | async)">
       <div class="product">
         <div class="imgWrapper">
-          <img [src]="product.product.imgPath"/>
+          <img [src]="product.imgPath"/>
         </div>
 
         <div class="productDescription">
           <div class="productInfoAndPrice">
-            <div class="productWeight">{{ product.product.productWeight }} {{ product.product.productSize }}</div>
-            <div class="prPrice">{{ product.product.productPrice }} грн</div>
+            <div class="productWeight">{{ product.productWeight }} {{ product.productSize }}</div>
+            <div class="prPrice">{{ product.productPrice }} грн</div>
           </div>
 
           <div class="productTitle">
-            <h4>{{ product.product.productTitle }}</h4>
+            <h4>{{ product.productTitle }}</h4>
           </div>
-          <div class="ingredients">{{ product.product.productDescription }}</div>
+          <div class="ingredients">{{ product.productDescription }}</div>
         </div>
 
         <div class="addToCartWrapper">
