--- a/src/app/userprofile/profile/profile.component.html
+++ b/src/app/userprofile/profile/profile.component.html
@@ -19,10 +19,8 @@
           </div>
       </div>
     </div>
-    <div class="row justify-content-center align-items-center">
-      <button class="btn btn-danger">
-        Edit photo
-      </button>
+    <div class="row justify-content-end align-items-center">
+      <input type="file">
     </div>
   </div>
 </div>
