Filtering products by active category is added

--- a/src/app/dashboard/sidebar/sidebar.component.html
+++ b/src/app/dashboard/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
     <nav id="productCategory">
 
         <div id="logo">
-            <a routerLink="products">Logo</a>
+            <a [routerLink]="['/dashboard', 'products', 'pizza']">Logo</a>
         </div>
 
         <ul>
