--- a/src/app/dashboard/sidebar/sidebar.component.html
+++ b/src/app/dashboard/sidebar/sidebar.component.html
@@ -6,9 +6,9 @@
         </div>
 
         <ul>
-            <li><a [routerLink]="['/dashboard', 'products', 'pizza']">Pizza</a></li>
-            <li><a [routerLink]="['/dashboard', 'products', 'drinks']">Drinks</a></li>
-            <li><a [routerLink]="['/dashboard', 'products', 'salads']">Salads</a></li>
+            <li routerLinkActive = "activeTab" [routerLink]="['/dashboard', 'products', 'pizza']"><a>Pizza</a></li>
+            <li routerLinkActive = "activeTab" [routerLink]="['/dashboard', 'products', 'drinks']"><a>Drinks</a></li>
+            <li routerLinkActive = "activeTab" [routerLink]="['/dashboard', 'products', 'salads']"><a>Salads</a></li>
         </ul>
     </nav>
 </div>
