--- a/src/app/dashboard/sidebar/sidebar.component.scss
+++ b/src/app/dashboard/sidebar/sidebar.component.scss
@@ -1,46 +1,50 @@
 #sideBar {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: black;
+  border: 1px solid red;
+  position: relative;
+
+  #productCategory {
     width: 100%;
-    height: 100%;
-    overflow: hidden;
-    background-color: black;
-    border: 1px solid red;
     position: relative;
+    top: 100px;
 
-    #productCategory {
-        //border: 1px solid green;
-        width: 100%;
-        position: relative;
-        top: 100px;
-
-        #logo {
-            text-align: center;
-        }
-
-
-        ul {
-            margin-left: 0;
-            list-style-position: inside;
-            width: 100%;
-            height: 100%;
-            padding-left: 0;
-            display: block;
-            text-decoration: none;
-            list-style-type: none;
-            color: white;
-            height: 211px;
-
-            li {
-                display: flexbox;
-                list-style-type: none;
-                line-height: 40px;
-                width: 100%;
-                text-align: center;
-
-                &:hover {
-                    cursor: pointer;
-                    background-color: rgb(49, 49, 49);
-                }
-            }
-        }
+    .activeTab {
+      color: white;
+      background-color: rgba(255, 86, 86, 0.76);
+      opacity: 1;
     }
+
+    #logo {
+      text-align: center;
+    }
+
+    ul {
+      margin-left: 0;
+      list-style-position: inside;
+      width: 100%;
+      height: 100%;
+      padding-left: 0;
+      display: block;
+      text-decoration: none;
+      list-style-type: none;
+      color: white;
+      height: 211px;
+
+      li {
+        display: flexbox;
+        list-style-type: none;
+        line-height: 40px;
+        width: 100%;
+        text-align: center;
+
+        &:hover {
+          cursor: pointer;
+          background-color: rgb(49, 49, 49);
+        }
+      }
+    }
+  }
 }
