--- a/src/app/userprofile/profile/profile.component.html
+++ b/src/app/userprofile/profile/profile.component.html
@@ -5,6 +5,11 @@
       <li><a>Orders History</a></li>
     </ul>
 
+    <div id="editProfile" 
+         (click)="editProfile()">
+         Edit
+    </div>
+
     <div id="userDetails">
       <div class="row">
         <div class="col-md-5">
@@ -23,4 +28,8 @@
       <input type="file">
     </div>
   </div>
+
+  <ng-container *ngIf="editMode">
+    <app-edit-profile></app-edit-profile>
+  </ng-container>
 </div>
