--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -1,7 +1,7 @@
 <div class="col-xs-12 col-md-12">
     <form id="signIn"
-          (ngSubmit)="onLogin(f)"
-          #f="ngForm">
+          (ngSubmit)="onLogin(form)"
+          #form="ngForm">
 
     <div id="credentialsWrapper">
         <div class="form-group">
@@ -44,7 +44,7 @@
         <button class="btn btn-primary"
                 id="signInBtn"
                 type="submit"
-                [disabled]="!f.valid">
+                [disabled]="!form.valid">
             Log In  
         </button>
     </div>
