--- a/src/app/dashboard/product-grid/product-grid.component.scss
+++ b/src/app/dashboard/product-grid/product-grid.component.scss
@@ -5,7 +5,7 @@
 
   .product {
     width: 85%;
-    height: 370px;
+    height: 40vh;
     border: 1px solid red;
     overflow: hidden;
     text-align: center;
@@ -20,7 +20,7 @@
 
   .imgWrapper img {
     width: 100%;
-    height: 270px;
+    height: 32vh;
     overflow: hidden;
   }
 
