Some modifications to the 'authService' are added

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,9 +4,16 @@ html, body {
 }
 
 body {
-    background-image: url('./assets/fooddelivery1.jpg'); 
+    background-image: url('./assets/fooddelivery1.jpg');
     background-size: contain 100%;
     background-repeat: no-repeat;
+
+}
+
+.button {
+  color: red;
+  background: green;
+  width: 1000px;
 }
 
 @media screen and (min-width: 1410px) {
