Logic for setting product details to the separate component is implemented

--- a/src/app/dashboard/product-grid/product-grid.component.html
+++ b/src/app/dashboard/product-grid/product-grid.component.html
@@ -1,38 +1,8 @@
 <div id="products-grid">
   <div class="row">
-    <div class="col-lg-4 col-md-4 col-sm-6" 
+    <div class="col-lg-4 col-md-4 col-sm-6"
          *ngFor="let product of (products$ | async)">
-      <div class="product">
-        <div class="imgWrapper">
-          <img [src]="product.imgPath"/>
-        </div>
-
-        <div class="productDescription">
-          <div class="productInfoAndPrice">
-            <div class="productWeight">{{ product.productWeight }} {{ product.productSize }}</div>
-            <div class="prPrice">{{ product.productPrice }} грн</div>
-          </div>
-
-          <div class="productTitle">
-            <h4>{{ product.productTitle }}</h4>
-          </div>
-          <div class="ingredients">{{ product.productDescription }}</div>
-        </div>
-
-        <div class="addToCartWrapper">
-          <div class="productQuantity">
-            - 1 +
-          </div>
-
-          <div class="addToCart">
-            Add To Cart
-          </div>
-
-          <div class="productPrice">
-            175$
-          </div>
-        </div>
-      </div>
+      <app-product-item [productData]="product"></app-product-item>
     </div>
   </div>
 </div>
