'Cart' component is added && some modifications to the header widget is implemented

--- a/src/app/dashboard/product-item/product-item.component.html
+++ b/src/app/dashboard/product-item/product-item.component.html
@@ -20,7 +20,7 @@
       - 1 +
     </div>
 
-    <div class="addToCart">
+    <div class="addToCart" (click)="addProductToCart()">
       Add To Cart
     </div>
 
