--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -7,6 +7,9 @@
         <div id="activeUser">
             Hello <a [routerLink]="['profile', userId]"><b>{{ activeUser.login }}</b></a> / <a (click)="logOut()">Log Out</a>
         </div>
-        <div id="cart">Product Cart</div>
+        <div id="cart" (click)="openCart()">
+          <div id="cartCounter">{{ productQuantity || 0 }}</div>
+          <img src="./../../../assets/cart.png">
+        </div>
     </div>
 </header>
