Added some fixes to the "Cart" component UI and also delete functionality

--- a/src/app/dashboard/product-item/product-item.component.html
+++ b/src/app/dashboard/product-item/product-item.component.html
@@ -6,7 +6,7 @@
   <div class="productDescription">
     <div class="productInfoAndPrice">
       <div class="productWeight">{{ productData.productWeight }} {{ productData.productSize }}</div>
-      <div class="prPrice">{{ productData.productPrice }} грн</div>
+      <div class="prPrice">{{ productData.productPrice }} $ </div>
     </div>
 
     <div class="productTitle">
@@ -25,7 +25,7 @@
     </div>
 
     <div class="productPrice">
-      175$
+      {{ productData.productPrice }} $
     </div>
   </div>
 </div>
