--- a/src/app/dashboard/cart/cart.component.html
+++ b/src/app/dashboard/cart/cart.component.html
@@ -5,42 +5,38 @@
     </header>
   </div>
 
-  <div id="products">
-    <div id="emptyCart" *ngIf="cart.length == 0">
+  <div id="products" class="align-middle">
+    <div id="emptyCart" *ngIf="cart.length == 0" >
       <h2>Cart is empty</h2>
     </div>
 
     <div *ngFor="let product of cart"
          class="product">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="productLogoWrapper">
-            <img [src]="product.product.imgPath" class="img-responsive"  >
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          {{ product.product.productTitle }}
-          <br>
-          {{ product.product.productPrice }}
-        </div>
-
-
-        <div class="col-md-4">
-          -  1  +
-        </div>
-
-        <div class="col-md-1">
-          <button class="btn btn-danger" (click)="deleteCurrentProduct(product)">X</button>
-        </div>
-
-
+      <div class="productLogoWrapper">
+        <img [src]="product.product.imgPath" class="img-responsive"  >
       </div>
+
+      <div class="productTitle">
+        <h5> {{ product.product.productTitle }} </h5>
+      </div>
+
+      <!--Section-->
+      <!--
+      -  1  +
+      -->
+
+      <div class="productPrice">
+        <h5>{{ product.product.productPrice }} $</h5>
+      </div>
+
+      <div class="deleteItem">
+        <button class="btn btn-danger" (click)="deleteCurrentProduct(product)">X</button>
+      </div>
+      <hr>
     </div>
-
-
   </div>
-  <div id="controls">
+
+  <div id="controls" *ngIf="cart.length !== 0">
     <button class="btn btn-success" id="buyProducts">BUY</button>
   </div>
 </div>
