--- a/src/app/dashboard/cart/cart.component.scss
+++ b/src/app/dashboard/cart/cart.component.scss
@@ -1,6 +1,6 @@
 #productCart {
   width: 75%;
-  min-height: 400px;
+  min-height: 290px;
   height: auto;
   margin: 0 auto;
   position: relative;
@@ -19,12 +19,13 @@
   #products {
     width: 100%;
     height: 100%;
-    border: 1px solid red;
-
+    //border: 1px solid red;
 
     #emptyCart {
       text-align: center;
-      position: relative;
+      position: absolute;
+      left: 40%;
+      top: 37%;
       height: 100%;
       line-height: 100%;
     }
@@ -32,21 +33,41 @@
     .product{
       height: 150px;
       width: 100%;
-      border: 1px solid red;
+      // border: 1px solid red;
       &:last-child {
         margin-bottom: 40px;
       }
 
+      .productTitle {
+        //border: 1px solid red;
+        width: 50%;
+        display: inline-block;
+        text-align: center;
+        line-height: 100%;
+      }
+
+      .productPrice {
+        width: 20%;
+        display: inline-block;
+      }
+
+      .deleteItem {
+        //border: 1px solid red;
+        text-align: center;
+        width: 10%;
+        display: inline-block;
+      }
+
       .productLogoWrapper {
         width: 130px;
-        height: 80px;
+        height: 100%;
+        display: inline-block;
         line-height: 130px;
-        border: 1px solid red;
+        //border: 1px solid red;
         background-size: cover;
 
         img {
           width: 100%;
-
         }
       }
     }
@@ -57,8 +78,7 @@
     height: 70px;
     text-align: center;
     line-height: 70px;
-    position: absolute;
+    position: relative;
     bottom: 0;
-    border: 1px solid red;
   }
 }
