--- a/src/app/dashboard/product-item/product-item.component.scss
+++ b/src/app/dashboard/product-item/product-item.component.scss
@@ -1,7 +1,7 @@
 .product {
   width: 85%;
-  height: 40vh;
-  border: 1px solid red;
+  height: 43vh;
+  // border: 1px solid red;
   overflow: hidden;
   text-align: center;
   margin-top: 20px;
@@ -45,7 +45,7 @@
 }
 
 .productQuantity {
-  border: 1px solid red;
+  // border: 1px solid red;
   width: 25%;
   position: relative;
   height: 100%;
@@ -54,7 +54,7 @@
 }
 
 .addToCart {
-  border: 1px solid red;
+  // border: 1px solid red;
   float: left;
   width: 50%;
   height: 100%;
@@ -62,7 +62,7 @@
 }
 
 .productPrice {
-  border: 1px solid red;
+  // border: 1px solid red;
   float: left;
   width: 25%;
   height: 100%;
@@ -70,7 +70,7 @@
 }
 
 .productInfoAndPrice {
-  border: 1px solid red;
+  // border: 1px solid red;
   width: 100%;
   height: 25px;
   line-height: 25px;
@@ -99,7 +99,7 @@
   left: 10%;
   width: 90%;
   height: 30px;
-  border: 1px solid red;
+  // border: 1px solid red;
 }
 
 .ingredients {
@@ -108,7 +108,7 @@
   width: 90%;
   height: 45px;
   line-height: 18px;
-  border: 1px solid red;
+  // border: 1px solid red;
   font-size: 11px;
   text-align: start;
   word-wrap: break-word;
